--- a/CódigoFonte/index.html
+++ b/CódigoFonte/index.html
@@ -2,82 +2,58 @@
 <html lang="en">
 
 <head>
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Link CSS -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Link GoogleIcons-->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <!--Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Roboto:wght@300;400&display=swap"
-        rel="stylesheet">
-    <!--Link Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
-    
-
-    <title>Cine Guide</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Link CSS -->
+  <link rel="stylesheet" href="style.css">
+  <!-- Link GoogleIcons-->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <!--Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Roboto:wght@300;400&display=swap"
+    rel="stylesheet">
+  <!--Link Bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+  <title>Cine Guide</title>
 </head>
 
 <body>
-    <header>
-        <ul>
-            <li>
-                <h1> Logo</h1>
-            </li>
-            <li> <input type="text"> <span class="material-symbols-outlined"> search </span> </li>
-            <li> Sessão Nostalgia <span class="material-symbols-outlined"> videocam </span> </li>
-            <li> Favoritos <span class="material-symbols-outlined">star</span> </li>
-        </ul>
-    </header>
-    <main>
-        <section class="search-film-by-streaming">
-            <label>Filme</label>
-            <input type="checkbox" name="film" id="film">
-            <label>Gênero</label>
-            <select name="select">
-                <option value="valor1" selected>Terror</option>
-                <option value="valor2">Ação</option>
-                <option value="valor3">Aventura</option>
-            </select>
-        </section>
-        <section class="carrousel">
-            <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="./src/img/homem_aranha.jpg" class="d-block w-100" alt="homem-aranha">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./src/img/img_300.jpeg" class="d-block w-100" alt="filme-300">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./src/img/img_mario.jpeg" class="d-block w-100" alt="filme-mario">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-        </section>
-
-    </main>
+  <header>
+    <ul>
+      <li>
+        <h1> Logo</h1>
+      </li>
+      <li>
+        <input type="text"> <span class="material-symbols-outlined"> search </span>
+      </li>
+      <li>
+        Sessão Nostalgia <span class="material-symbols-outlined"> videocam </span>
+      </li>
+      <li>
+        Favoritos <span class="material-symbols-outlined"> favorite </span>
+      </li>
+    </ul>
+  </header>
+  <main>
+    <section class="search-film-by-streaming">
+      <h2 id="titulo-busca">Selecione gênero e Streaming</h2>
+      <label>Gênero</label>
+      <select name="select">
+        <option value="valor1" selected>Terror</option>
+        <option value="valor2">Ação</option>
+        <option value="valor3">Aventura</option>
+      </select>
+    </section>
+  
+  </main>
 
 </body>
 
