--- a/CódigoFonte/index.html
+++ b/CódigoFonte/index.html
@@ -43,16 +43,27 @@
     </ul>
   </header>
   <main>
+    <h2 id="titulo-busca">Selecione gênero e Streaming</h2>
     <section class="search-film-by-streaming">
-      <h2 id="titulo-busca">Selecione gênero e Streaming</h2>
-      <label>Gênero</label>
-      <select name="select">
-        <option value="valor1" selected>Terror</option>
-        <option value="valor2">Ação</option>
-        <option value="valor3">Aventura</option>
-      </select>
+      <div class="form-wrapper">
+        <label>Gênero</label>
+        <select name="select">
+          <option value="valor1" selected>Terror</option>
+          <option value="valor2">Ação</option>
+          <option value="valor3">Aventura</option>
+        </select>
+      </div>
+      <div>
+        <label>Streaming</label>
+        <select name="select">
+          <option value="valor1" selected>Netflix</option>
+          <option value="valor2">Amazon Prime</option>
+          <option value="valor3">Globo Play</option>
+        </select>
+        <button>Buscar</button>
+      </div>
     </section>
-  
+
   </main>
 
 </body>
