--- a/CódigoFonte/index.html
+++ b/CódigoFonte/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- LinkBanner-->
+  <script src="./banner.js"></script>
+  <link rel="stylesheet" href="banner.css">
   <!--Link CSS -->
   <link rel="stylesheet" href="style.css">
   <!-- Link GoogleIcons-->
@@ -17,11 +20,7 @@
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Roboto:wght@300;400&display=swap"
     rel="stylesheet">
   <!--Link Bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
+
   <title>Cine Guide</title>
 </head>
 <body>
@@ -64,6 +63,40 @@
         <button>Buscar</button>
       </div>
     </section>
+    <section class="banner fadeInDown" data-anime="600">
+      <div class="slideshow-container">
+
+        <!-- Full-width images with number -->
+        <div class="mySlides fade">
+          <img src="./src/img/homem_aranha.jpg" class="images">
+        </div>
+
+        <div class="mySlides fade">
+          <img src="./src/img/coyote-vs-acme.jpg" class="images">
+        </div>
+
+        <div class="mySlides fade">
+          <img src="./src/img/Panico-6.jpg" class="images">
+        </div>
+        <div class="mySlides fade">
+          <img src="./src/img/Super-Mario-Pós-créditos.jpeg" class="images">
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br>
+
+      <!-- The dots/circles -->
+      <div class="dots">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+      </div>
+    </section>
+
 
   </main>
 
