--- a/CódigoFonte/index.html
+++ b/CódigoFonte/index.html
@@ -67,7 +67,7 @@
       <div class="slideshow-container">
 
         <!-- Full-width images with number -->
-        <div class="mySlides fade">
+        <div class="mySlides fade " id="img-active">
           <img src="./src/img/homem_aranha.jpg" class="images">
         </div>
 
@@ -95,6 +95,10 @@
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
       </div>
+    </section>
+
+    <section>
+
     </section>
 
 
