--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -69,22 +69,31 @@
         <button>Buscar</button>
       </div>
     </section>
+    <h1> Filmes em Cartaz nos cinemas</h1>
     <section class="banner fadeInDown" data-anime="600">
       <div class="slideshow-container">
 
         <!-- Full-width images with number -->
         <div class="mySlides fade " id="img-active">
+          <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            Trailer</button>
           <img src="./src/img/homem_aranha.jpg" class="images">
         </div>
 
         <div class="mySlides fade">
+          <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            Trailer</button>
           <img src="./src/img/coyote-vs-acme.jpg" class="images">
         </div>
 
         <div class="mySlides fade">
+          <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            Trailer</button>
           <img src="./src/img/Panico-6.jpg" class="images">
         </div>
         <div class="mySlides fade">
+          <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            Trailer</button>
           <img src="./src/img/Super-Mario-Pós-créditos.jpeg" class="images">
         </div>
 
@@ -101,8 +110,54 @@
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
       </div>
-        
-      <section class="card-trailler">
+
+      <div class="glider-contain">
+        <div class="glider">
+          <div class="card">
+            <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+            <div class="info">
+              <h2>Peter Pan</h2>
+              <p>Informações: Duração, onde asssistir etc</p>
+              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+                Trailer</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+            <div class="info">
+              <h2>Peter Pan</h2>
+              <p>Informações: Duração, onde asssistir etc</p>
+              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+                Trailer</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+            <div class="info">
+              <h2>Peter Pan</h2>
+              <p>Informações: Duração, onde asssistir etc</p>
+              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+                Trailer</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+            <div class="info">
+              <h2>Peter Pan</h2>
+              <p>Informações: Duração, onde asssistir etc</p>
+              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+                Trailer</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+            <div class="info">
+              <h2>Peter Pan</h2>
+              <p>Informações: Duração, onde asssistir etc</p>
+              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+                Trailer</button>
+            </div>
+          </div>
           <div class="card">
             <img src="imagem-do-filme.jpg" alt="Título do Filme">
             <div class="info">
@@ -112,103 +167,53 @@
                 Trailer</button>
             </div>
           </div>
-
-          </div>
-        </section>
-          <div class="glider-contain">
-            <div class="glider">
-              <div class="card">
-                <img src="imagem-do-filme.jpg" alt="Título do Filme">
-                <div class="info">
-                  <h2>Título do Filme</h2>
-                  <p>Descrição do Filme.</p>
-                  <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                    Trailer</button>
-                </div>
-              </div> <div class="card">
-                <img src="imagem-do-filme.jpg" alt="Título do Filme">
-                <div class="info">
-                  <h2>Título do Filme</h2>
-                  <p>Descrição do Filme.</p>
-                  <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                    Trailer</button>
-                </div>
-              </div> <div class="card">
-                <img src="imagem-do-filme.jpg" alt="Título do Filme">
-                <div class="info">
-                  <h2>Título do Filme</h2>
-                  <p>Descrição do Filme.</p>
-                  <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                    Trailer</button>
-                </div>
-              </div> <div class="card">
-                <img src="imagem-do-filme.jpg" alt="Título do Filme">
-                <div class="info">
-                  <h2>Título do Filme</h2>
-                  <p>Descrição do Filme.</p>
-                  <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                    Trailer</button>
-                </div>
-              </div> <div class="card">
-                <img src="imagem-do-filme.jpg" alt="Título do Filme">
-                <div class="info">
-                  <h2>Título do Filme</h2>
-                  <p>Descrição do Filme.</p>
-                  <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                    Trailer</button>
-                </div>
-              </div> <div class="card">
-                <img src="imagem-do-filme.jpg" alt="Título do Filme">
-                <div class="info">
-                  <h2>Título do Filme</h2>
-                  <p>Descrição do Filme.</p>
-                  <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                    Trailer</button>
-                </div>
-              </div> <div class="card">
-                <img src="imagem-do-filme.jpg" alt="Título do Filme">
-                <div class="info">
-                  <h2>Título do Filme</h2>
-                  <p>Descrição do Filme.</p>
-                  <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                    Trailer</button>
-                </div>
-              </div> <div class="card">
-                <img src="imagem-do-filme.jpg" alt="Título do Filme">
-                <div class="info">
-                  <h2>Título do Filme</h2>
-                  <p>Descrição do Filme.</p>
-                  <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                    Trailer</button>
-                </div>
-              </div> <div class="card">
-                <img src="imagem-do-filme.jpg" alt="Título do Filme">
-                <div class="info">
-                  <h2>Título do Filme</h2>
-                  <p>Descrição do Filme.</p>
-                  <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                    Trailer</button>
-                </div>
-              </div> <div class="card">
-                <img src="imagem-do-filme.jpg" alt="Título do Filme">
-                <div class="info">
-                  <h2>Título do Filme</h2>
-                  <p>Descrição do Filme.</p>
-                  <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                    Trailer</button>
-                </div>
-              </div>
-              <div>your content here</div>
+          <div class="card">
+            <img src="imagem-do-filme.jpg" alt="Título do Filme">
+            <div class="info">
+              <h2>Título do Filme</h2>
+              <p>Descrição do Filme.</p>
+              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+                Trailer</button>
             </div>
-          
-            <button aria-label="Previous" class="glider-prev">«</button>
-            <button aria-label="Next" class="glider-next">»</button>
-            <div role="tablist" class="dots"></div>
           </div>
-          <div id="resp-dots"></div>
-          <script src="/Glider.js-master/glider.min.js"></script>
+          <div class="card">
+            <img src="imagem-do-filme.jpg" alt="Título do Filme">
+            <div class="info">
+              <h2>Título do Filme</h2>
+              <p>Descrição do Filme.</p>
+              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+                Trailer</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="imagem-do-filme.jpg" alt="Título do Filme">
+            <div class="info">
+              <h2>Título do Filme</h2>
+              <p>Descrição do Filme.</p>
+              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+                Trailer</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="imagem-do-filme.jpg" alt="Título do Filme">
+            <div class="info">
+              <h2>Título do Filme</h2>
+              <p>Descrição do Filme.</p>
+              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+                Trailer</button>
+            </div>
+          </div>
+          <div>your content here</div>
+        </div>
 
+        <button aria-label="Previous" class="glider-prev">«</button>
+        <button aria-label="Next" class="glider-next">»</button>
+        <div role="tablist" class="dots"></div>
+      </div>
+      <div id="resp-dots"></div>
+      <script src="/Glider.js-master/glider.min.js"></script>
 
+>
 
   </main>
 
