alinhando textos e ajustando main

--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -75,34 +75,38 @@
 
         <!-- Full-width images with number -->
         <div class="mySlides fade " id="img-active">
-          <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+          <button class="trailer-button" id="cinema-button"
+            data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
             Trailer</button>
           <img src="./src/img/homem_aranha.jpg" class="images">
         </div>
 
         <div class="mySlides fade">
-          <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+          <button class="trailer-button" id="cinema-button"
+            data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
             Trailer</button>
           <img src="./src/img/coyote-vs-acme.jpg" class="images">
         </div>
 
         <div class="mySlides fade">
-          <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+          <button class="trailer-button" id="cinema-button"
+            data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
             Trailer</button>
           <img src="./src/img/Panico-6.jpg" class="images">
         </div>
         <div class="mySlides fade">
-          <button class="trailer-button" id="cinema-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+          <button class="trailer-button" id="cinema-button"
+            data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
             Trailer</button>
           <img src="./src/img/Super-Mario-Pós-créditos.jpeg" class="images">
         </div>
-
+        
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
       <br>
-
+      
       <!-- The dots/circles -->
       <div class="dots">
         <span class="dot" onclick="currentSlide(1)"></span>
@@ -110,110 +114,109 @@
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
       </div>
-
-      <div class="glider-contain">
-        <div class="glider">
-          <div class="card">
-            <img src="./src/img/peterpan.jpg" alt="Título do Filme">
-            <div class="info">
-              <h2>Peter Pan</h2>
-              <p>Informações: Duração, onde asssistir etc</p>
-              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
-                Trailer</button>
-            </div>
+    </section>
+    <h1>Lançamentos</h1>
+    <div class="glider-contain">
+      <div class="glider">
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Informações: Duração, onde asssistir etc</p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
           </div>
-          <div class="card">
-            <img src="./src/img/peterpan.jpg" alt="Título do Filme">
-            <div class="info">
-              <h2>Peter Pan</h2>
-              <p>Informações: Duração, onde asssistir etc</p>
-              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
-                Trailer</button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="./src/img/peterpan.jpg" alt="Título do Filme">
-            <div class="info">
-              <h2>Peter Pan</h2>
-              <p>Informações: Duração, onde asssistir etc</p>
-              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
-                Trailer</button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="./src/img/peterpan.jpg" alt="Título do Filme">
-            <div class="info">
-              <h2>Peter Pan</h2>
-              <p>Informações: Duração, onde asssistir etc</p>
-              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
-                Trailer</button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="./src/img/peterpan.jpg" alt="Título do Filme">
-            <div class="info">
-              <h2>Peter Pan</h2>
-              <p>Informações: Duração, onde asssistir etc</p>
-              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
-                Trailer</button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="imagem-do-filme.jpg" alt="Título do Filme">
-            <div class="info">
-              <h2>Título do Filme</h2>
-              <p>Descrição do Filme.</p>
-              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                Trailer</button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="imagem-do-filme.jpg" alt="Título do Filme">
-            <div class="info">
-              <h2>Título do Filme</h2>
-              <p>Descrição do Filme.</p>
-              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                Trailer</button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="imagem-do-filme.jpg" alt="Título do Filme">
-            <div class="info">
-              <h2>Título do Filme</h2>
-              <p>Descrição do Filme.</p>
-              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                Trailer</button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="imagem-do-filme.jpg" alt="Título do Filme">
-            <div class="info">
-              <h2>Título do Filme</h2>
-              <p>Descrição do Filme.</p>
-              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                Trailer</button>
-            </div>
-          </div>
-          <div class="card">
-            <img src="imagem-do-filme.jpg" alt="Título do Filme">
-            <div class="info">
-              <h2>Título do Filme</h2>
-              <p>Descrição do Filme.</p>
-              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-                Trailer</button>
-            </div>
-          </div>
-          <div>your content here</div>
         </div>
-
-        <button aria-label="Previous" class="glider-prev">«</button>
-        <button aria-label="Next" class="glider-next">»</button>
-        <div role="tablist" class="dots"></div>
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Informações: Duração, onde asssistir etc</p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Informações: Duração, onde asssistir etc</p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Informações: Duração, onde asssistir etc</p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Informações: Duração, onde asssistir etc</p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="imagem-do-filme.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Título do Filme</h2>
+            <p>Descrição do Filme.</p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="imagem-do-filme.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Título do Filme</h2>
+            <p>Descrição do Filme.</p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="imagem-do-filme.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Título do Filme</h2>
+            <p>Descrição do Filme.</p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="imagem-do-filme.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Título do Filme</h2>
+            <p>Descrição do Filme.</p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="imagem-do-filme.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Título do Filme</h2>
+            <p>Descrição do Filme.</p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div>your content here</div>
       </div>
-      <div id="resp-dots"></div>
-      <script src="/Glider.js-master/glider.min.js"></script>
 
->
+      <button aria-label="Previous" class="glider-prev">«</button>
+      <button aria-label="Next" class="glider-next">»</button>
+      <div role="tablist" class="dots"></div>
+    </div>
+    <div id="resp-dots"></div>
+    <script src="/Glider.js-master/glider.min.js"></script>
 
   </main>
 
