Fixando Container Iframe
Fixando Container Iframe

--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- LinkBanner-->
-  <script src="/scripts/banner.js"></script>
-  <link rel="stylesheet" href="/css/banner.css">
+  <script src="./scripts/banner.js"></script>
+  <link rel="stylesheet" href="./css/banner.css">
   <!-- Link GoogleIcons-->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -18,12 +18,12 @@
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Roboto:wght@300;400&display=swap"
     rel="stylesheet">
   <!--trailler-list-->
-  <link rel="stylesheet" href="/css/trailler.css">
-  <script src="/scripts/trailler.js" defer></script>
+  <link rel="stylesheet" href="./css/trailler.css">
+  <script src="./scripts/trailler.js" defer></script>
   <!--Link CSS -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <!--Links Glider-->
-  <link rel="stylesheet" href="/Glider.js-master/glider.min.css">
+  <link rel="stylesheet" href="./Glider.js-master/glider.min.css">
 
 
   <title>Cine Guide</title>
@@ -78,27 +78,27 @@
           <button class="trailer-button" id="cinema-button"
             data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
             Trailer</button>
-          <img src="/src/img/homem_aranha.jpg" class="images">
+          <img src="./src/img/homem_aranha.jpg" class="images">
         </div>
 
         <div class="mySlides fade">
           <button class="trailer-button" id="cinema-button"
             data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
             Trailer</button>
-          <img src="/src/img/coyote-vs-acme.jpg" class="images">
+          <img src="./src/img/coyote-vs-acme.jpg" class="images">
         </div>
 
         <div class="mySlides fade">
           <button class="trailer-button" id="cinema-button"
-            data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            data-trailer="https://www.youtube.com/embed/QOgdGhA9gos">Assista ao
             Trailer</button>
-          <img src="/src/img/Panico-6.jpg" class="images">
+          <img src="./src/img/Panico-6.jpg" class="images">
         </div>
         <div class="mySlides fade">
           <button class="trailer-button" id="cinema-button"
             data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
             Trailer</button>
-          <img src="/src/img/Super-Mario-Pós-créditos.jpeg" class="images">
+          <img src="./src/img/Super-Mario-Pós-créditos.jpeg" class="images">
         </div>
         
         <!-- Next and previous buttons -->
@@ -128,7 +128,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Informações: Duração, onde asssistir etc</p>
@@ -137,25 +137,26 @@
           </div>
         </div>
         <div class="card">
-          <img src="/src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Informações: Duração, onde asssistir etc</p>
+            <p>Duração: 2.5h</p>
+            <p>Onde Assistir: <a href="" target="_blank">Disney Plus</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="/src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Informações: Duração, onde asssistir etc</p>
+            <p>Informações: Duração, Genero  onde assistir</p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="/src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Informações: Duração, onde asssistir etc</p>
@@ -216,7 +217,7 @@
       <div role="tablist" class="dots"></div>
     </div>
     <div id="resp-dots"></div>
-    <script src="/Glider.js-master/glider.min.js"></script>
+    <script src="./Glider.js-master/glider.min.js"></script>
 
   </main>
 
