--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -17,14 +17,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Roboto:wght@300;400&display=swap"
     rel="stylesheet">
-  <!--trailler-list-->
-  <link rel="stylesheet" href="./css/trailler.css">
-  <script src="./scripts/trailler.js" defer></script>
+  <!--iframe-video-->
+  <link rel="stylesheet" href="./css/iframe.css">
+  <script src="./scripts/iframe.js" defer></script>
   <!--Link CSS -->
   <link rel="stylesheet" href="./css/style.css">
   <!--Links Glider-->
   <link rel="stylesheet" href="./Glider.js-master/glider.min.css">
-
+  <!--Script -->
+  <script src="./scripts/script.js" defer></script>
 
   <title>Cine Guide</title>
 </head>
@@ -45,6 +46,20 @@
         Favoritos <span class="material-symbols-outlined"> favorite </span>
       </li>
     </ul>
+    <div class="wrapper-menu">
+      <span id="burguer" class="material-symbols-outlined">
+        menu
+      </span>
+      <menu id="itens">
+        <ul>
+          <li>Favoritos</li>
+          <li>Sessão Nostalgia</li>
+          <li>Pesquisar</li>
+        </ul>
+      </menu>
+    </div>
+
+
   </header>
   <main>
     <h2 id="titulo-busca">Selecione gênero e Streaming</h2>
@@ -100,13 +115,13 @@
             Trailer</button>
           <img src="./src/img/Super-Mario-Pós-créditos.jpeg" class="images">
         </div>
-        
+
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
       <br>
-      
+
       <!-- The dots/circles -->
       <div class="dots">
         <span class="dot" onclick="currentSlide(1)"></span>
@@ -150,7 +165,7 @@
           <img src="./src/img/peterpan.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Informações: Duração, Genero  onde assistir</p>
+            <p>Informações: Duração, Genero onde assistir</p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
               Trailer</button>
           </div>
