--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -33,7 +33,7 @@
 <body>
   <header>
     <ul>
-      <li>
+      <li id="logo">
         <h1> Logo</h1>
       </li>
       <li>
@@ -45,21 +45,20 @@
       <li>
         Favoritos <span class="material-symbols-outlined"> favorite </span>
       </li>
+      <li id="burguer">
+        <span class="material-symbols-outlined">
+          menu
+        </span>
+      </li>
     </ul>
-    <div class="wrapper-menu">
-      <span id="burguer" class="material-symbols-outlined">
-        menu
-      </span>
-      <menu id="itens">
-        <ul>
-          <li>Favoritos</li>
-          <li>Sessão Nostalgia</li>
-          <li>Pesquisar</li>
-        </ul>
-      </menu>
-    </div>
-
-
+    <br>
+    <menu id="menu-mobile">
+      <ul>
+        <li>Favoritos</li>
+        <li>Sessão Nostalgia</li>
+        <li>Pesquisar</li>
+      </ul>
+    </menu>
   </header>
   <main>
     <h2 id="titulo-busca">Selecione gênero e Streaming</h2>
