--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -33,7 +33,7 @@
 <body>
   <header>
     <ul>
-      <li id="logo">
+      <li>
         <h1> Logo</h1>
       </li>
       <li>
@@ -45,20 +45,21 @@
       <li>
         Favoritos <span class="material-symbols-outlined"> favorite </span>
       </li>
-      <li id="burguer">
-        <span class="material-symbols-outlined">
-          menu
-        </span>
-      </li>
     </ul>
-    <br>
-    <menu id="menu-mobile">
-      <ul>
-        <li>Favoritos</li>
-        <li>Sessão Nostalgia</li>
-        <li>Pesquisar</li>
-      </ul>
-    </menu>
+    <div class="wrapper-menu">
+      <span id="burguer" class="material-symbols-outlined">
+        menu
+      </span>
+      <menu id="itens">
+        <ul>
+          <li>Favoritos</li>
+          <li>Sessão Nostalgia</li>
+          <li>Pesquisar</li>
+        </ul>
+      </menu>
+    </div>
+
+
   </header>
   <main>
     <h2 id="titulo-busca">Selecione gênero e Streaming</h2>
@@ -136,95 +137,183 @@
           <img src="./src/img/peterpan.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Informações: Duração, onde asssistir etc</p>
+            <p>Sinopse: <br>Wendy Darling, uma jovem com medo de deixar sua casa de infância para trás, conhece Peter Pan, um menino que se recusa a crescer. Com seus irmãos e uma fada, Tinker Bell, ela viaja com Peter para o mundo mágico da Terra do Nunca. Lá, ela encontra um pirata perverso chamado Capitão Gancho, e embarca em uma aventura emocionante que vai mudar sua vida para sempre.</br></p>
+            <p>Duração: 1h40min
+              <br>Gênero: fantasia; aventura
+              <br>Ano: 2023
+              <br>Diretor: David Lowery
+              <br>Nota: 1.4</br>
+            </p>   
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09" target="_blank">Disney Plus</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="./src/img/the-inhabitant-2022-02.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Aquele que habita em mim</h2>
+            <p>Sinopse: <br>Uma adolescente com problemas na escola descobre que é descendente de uma lendária assassina. Quando pessoas começam a morrer a seu redor, ela começa a duvidar da própria sanidade.</br></p>
+            <p>Duração: 1h 36min
+              <br>Gênero: Suspense, horror
+              <br>Ano: 2023
+              <br>Diretor: Jerren Lauder
+              <br>Nota: 4.3</br>
+            </p>   
+            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Informações: Duração, onde asssistir etc</p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <p>Sinopse: <br></br></p>
+            <p>Duração: 
+              <br>Gênero: 
+              <br>Ano: 
+              <br>Diretor: 
+              <br>Nota: </br>
+            </p>   
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Duração: 2.5h</p>
-            <p>Onde Assistir: <a href="" target="_blank">Disney Plus</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <p>Sinopse: <br></br></p>
+            <p>Duração: 
+              <br>Gênero: 
+              <br>Ano: 
+              <br>Diretor: 
+              <br>Nota: </br>
+            </p>   
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Informações: Duração, Genero onde assistir</p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <p>Sinopse: <br></br></p>
+            <p>Duração: 
+              <br>Gênero: 
+              <br>Ano: 
+              <br>Diretor: 
+              <br>Nota: </br>
+            </p>   
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <img src="" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Informações: Duração, onde asssistir etc</p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+            <p>Sinopse: <br></br></p>
+            <p>Duração: 
+              <br>Gênero: 
+              <br>Ano: 
+              <br>Diretor: 
+              <br>Nota: </br>
+            </p>   
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="imagem-do-filme.jpg" alt="Título do Filme">
+          <img src="" alt="Título do Filme">
           <div class="info">
-            <h2>Título do Filme</h2>
-            <p>Descrição do Filme.</p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+            <h2>Peter Pan</h2>
+            <p>Sinopse: <br></br></p>
+            <p>Duração: 
+              <br>Gênero: 
+              <br>Ano: 
+              <br>Diretor: 
+              <br>Nota: </br>
+            </p>   
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="imagem-do-filme.jpg" alt="Título do Filme">
+          <img src="" alt="Título do Filme">
           <div class="info">
-            <h2>Título do Filme</h2>
-            <p>Descrição do Filme.</p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+            <h2>Peter Pan</h2>
+            <p>Sinopse: <br></br></p>
+            <p>Duração: 
+              <br>Gênero: 
+              <br>Ano: 
+              <br>Diretor: 
+              <br>Nota: </br>
+            </p>   
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="imagem-do-filme.jpg" alt="Título do Filme">
+          <img src="" alt="Título do Filme">
           <div class="info">
-            <h2>Título do Filme</h2>
-            <p>Descrição do Filme.</p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+            <h2>Peter Pan</h2>
+            <p>Sinopse: <br></br></p>
+            <p>Duração: 
+              <br>Gênero: 
+              <br>Ano: 
+              <br>Diretor: 
+              <br>Nota: </br>
+            </p>   
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="imagem-do-filme.jpg" alt="Título do Filme">
+          <img src="" alt="Título do Filme">
           <div class="info">
-            <h2>Título do Filme</h2>
-            <p>Descrição do Filme.</p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
-              Trailer</button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="imagem-do-filme.jpg" alt="Título do Filme">
-          <div class="info">
-            <h2>Título do Filme</h2>
-            <p>Descrição do Filme.</p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/ENHKC0Dj644">Assista ao
+            <h2>Peter Pan</h2>
+            <p>Sinopse: <br></br></p>
+            <p>Duração: 
+              <br>Gênero: 
+              <br>Ano: 
+              <br>Diretor: 
+              <br>Nota: </br>
+            </p>   
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
           </div>
         </div>
         <div>your content here</div>
       </div>
+    <h1>Aclamados pelo Público</h1>
+    <div class="glider-contain">
+      <div class="glider">
+        <div class="card">
+          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Sinopse: <br>Wendy Darling, uma jovem com medo de deixar sua casa de infância para trás, conhece Peter Pan, um menino que se recusa a crescer. Com seus irmãos e uma fada, Tinker Bell, ela viaja com Peter para o mundo mágico da Terra do Nunca. Lá, ela encontra um pirata perverso chamado Capitão Gancho, e embarca em uma aventura emocionante que vai mudar sua vida para sempre.</br></p>
+            <p>Duração: 1h40min
+              <br>Gênero: fantasia; aventura
+              <br>Ano: 2023
+              <br>Diretor: David Lowery
+              <br>Nota: 1.4</br>
+            </p>   
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09" target="_blank">Disney Plus</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+              Trailer</button>
+          </div>
+        </div>
 
       <button aria-label="Previous" class="glider-prev">«</button>
       <button aria-label="Next" class="glider-next">»</button>
@@ -234,7 +323,13 @@
     <script src="./Glider.js-master/glider.min.js"></script>
 
   </main>
-
+  
+  <footer class="footer">
+    <div>
+      <p> Nos siga nas redes sociais</p>
+      <p><a href="link dos icones">icones</a></p>
+    </div>
+  </footer>
 </body>
 
 </html>
