--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -138,7 +138,7 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Duração: 1h40min
-              <br>Gênero: fantasia; aventura</br>
+              Gênero: fantasia; aventura
             </p>   
             <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09" target="_blank">Disney Plus</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
@@ -150,9 +150,9 @@
           <div class="info">
             <h2>Aquele que habita em mim</h2>
             <p>Duração: 1h 36min
-              <br>Gênero: Suspense, horror</br>
-            </p>   
-            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb" target="_blank"></a> </p>
+              Gênero: Suspense, horror
+            </p>
+            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
           </div>
@@ -162,32 +162,7 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Duração: 
-              <br>Gênero: </br>
-            </p>   
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
-              Trailer</button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="Título do Filme">
-          <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 
-              <br>Gênero: </br>
-            </p>   
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
-              Trailer</button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="Título do Filme">
-          <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: </br>
+              Gênero:
             </p>   
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
@@ -199,7 +174,7 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Duração: 
-              <br>Gênero: </br>
+              Gênero:
             </p>   
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
@@ -211,7 +186,7 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Duração: 
-              <br>Gênero:</br>
+              Gênero:
             </p>   
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
@@ -223,7 +198,31 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Duração: 
-              <br>Gênero: </br>
+              Gênero:
+            </p>   
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 
+              Gênero:
+            </p>   
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 
+              Gênero:
             </p>   
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
@@ -235,7 +234,7 @@
           <div class="info">
            <h2>Peter Pan</h2>
             <p>Duração: 
-              <br>Gênero: </br>
+              Gênero: 
             </p>    
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
@@ -247,7 +246,7 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Duração: 
-              <br>Gênero: </br>
+              Gênero: 
             </p>    
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
@@ -264,7 +263,7 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Duração: 
-              <br>Gênero: </br>
+              Gênero: 
             </p>    
             <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09" target="_blank">Disney Plus</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
