--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -33,7 +33,7 @@
 <body>
   <header>
     <ul>
-      <li>
+      <li id="logo">
         <h1> Logo</h1>
       </li>
       <li>
@@ -45,19 +45,20 @@
       <li>
         Favoritos <span class="material-symbols-outlined"> favorite </span>
       </li>
+      <li id="burguer">
+        <span class="material-symbols-outlined">  menu  </span>
+      </li>
     </ul>
-    <div class="wrapper-menu">
-      <span id="burguer" class="material-symbols-outlined">
-        menu
-      </span>
-      <menu id="itens">
-        <ul>
-          <li>Favoritos</li>
-          <li>Sessão Nostalgia</li>
-          <li>Pesquisar</li>
-        </ul>
-      </menu>
-    </div>
+    <menu id="menu-mobile">
+      <ul>
+        <li>Favoritos</li>
+        <li>Sessão Nostalgia</li>
+        <li>Pesquisar</li>
+      </ul>
+    </menu>
+
+    </ul>
+
 
 
   </header>
@@ -137,14 +138,18 @@
           <img src="./src/img/peterpan.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Sinopse: <br>Wendy Darling, uma jovem com medo de deixar sua casa de infância para trás, conhece Peter Pan, um menino que se recusa a crescer. Com seus irmãos e uma fada, Tinker Bell, ela viaja com Peter para o mundo mágico da Terra do Nunca. Lá, ela encontra um pirata perverso chamado Capitão Gancho, e embarca em uma aventura emocionante que vai mudar sua vida para sempre.</br></p>
+            <p>Sinopse: <br>Wendy Darling, uma jovem com medo de deixar sua casa de infância para trás, conhece Peter
+              Pan, um menino que se recusa a crescer. Com seus irmãos e uma fada, Tinker Bell, ela viaja com Peter para
+              o mundo mágico da Terra do Nunca. Lá, ela encontra um pirata perverso chamado Capitão Gancho, e embarca em
+              uma aventura emocionante que vai mudar sua vida para sempre.</br></p>
             <p>Duração: 1h40min
               <br>Gênero: fantasia; aventura
               <br>Ano: 2023
               <br>Diretor: David Lowery
               <br>Nota: 1.4</br>
-            </p>   
-            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09" target="_blank">Disney Plus</a> </p>
+            </p>
+            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
+                target="_blank">Disney Plus</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
               Trailer</button>
           </div>
@@ -153,14 +158,17 @@
           <img src="./src/img/the-inhabitant-2022-02.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Aquele que habita em mim</h2>
-            <p>Sinopse: <br>Uma adolescente com problemas na escola descobre que é descendente de uma lendária assassina. Quando pessoas começam a morrer a seu redor, ela começa a duvidar da própria sanidade.</br></p>
+            <p>Sinopse: <br>Uma adolescente com problemas na escola descobre que é descendente de uma lendária
+              assassina. Quando pessoas começam a morrer a seu redor, ela começa a duvidar da própria sanidade.</br></p>
             <p>Duração: 1h 36min
               <br>Gênero: Suspense, horror
               <br>Ano: 2023
               <br>Diretor: Jerren Lauder
               <br>Nota: 4.3</br>
-            </p>   
-            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb" target="_blank"></a> </p>
+            </p>
+            <p>Onde Assistir: <a
+                href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb"
+                target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
           </div>
@@ -170,12 +178,12 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
+            <p>Duração:
+              <br>Gênero:
+              <br>Ano:
+              <br>Diretor:
               <br>Nota: </br>
-            </p>   
+            </p>
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
@@ -186,12 +194,12 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
+            <p>Duração:
+              <br>Gênero:
+              <br>Ano:
+              <br>Diretor:
               <br>Nota: </br>
-            </p>   
+            </p>
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
@@ -202,12 +210,12 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
+            <p>Duração:
+              <br>Gênero:
+              <br>Ano:
+              <br>Diretor:
               <br>Nota: </br>
-            </p>   
+            </p>
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
@@ -218,12 +226,12 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
+            <p>Duração:
+              <br>Gênero:
+              <br>Ano:
+              <br>Diretor:
               <br>Nota: </br>
-            </p>   
+            </p>
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
@@ -234,12 +242,12 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
+            <p>Duração:
+              <br>Gênero:
+              <br>Ano:
+              <br>Diretor:
               <br>Nota: </br>
-            </p>   
+            </p>
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
@@ -250,12 +258,12 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
+            <p>Duração:
+              <br>Gênero:
+              <br>Ano:
+              <br>Diretor:
               <br>Nota: </br>
-            </p>   
+            </p>
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
@@ -266,12 +274,12 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
+            <p>Duração:
+              <br>Gênero:
+              <br>Ano:
+              <br>Diretor:
               <br>Nota: </br>
-            </p>   
+            </p>
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
@@ -282,12 +290,12 @@
           <div class="info">
             <h2>Peter Pan</h2>
             <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
+            <p>Duração:
+              <br>Gênero:
+              <br>Ano:
+              <br>Diretor:
               <br>Nota: </br>
-            </p>   
+            </p>
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
@@ -295,35 +303,39 @@
         </div>
         <div>your content here</div>
       </div>
-    <h1>Aclamados pelo Público</h1>
-    <div class="glider-contain">
-      <div class="glider">
-        <div class="card">
-          <img src="./src/img/peterpan.jpg" alt="Título do Filme">
-          <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Sinopse: <br>Wendy Darling, uma jovem com medo de deixar sua casa de infância para trás, conhece Peter Pan, um menino que se recusa a crescer. Com seus irmãos e uma fada, Tinker Bell, ela viaja com Peter para o mundo mágico da Terra do Nunca. Lá, ela encontra um pirata perverso chamado Capitão Gancho, e embarca em uma aventura emocionante que vai mudar sua vida para sempre.</br></p>
-            <p>Duração: 1h40min
-              <br>Gênero: fantasia; aventura
-              <br>Ano: 2023
-              <br>Diretor: David Lowery
-              <br>Nota: 1.4</br>
-            </p>   
-            <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09" target="_blank">Disney Plus</a> </p>
-            <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
-              Trailer</button>
+      <h1>Aclamados pelo Público</h1>
+      <div class="glider-contain">
+        <div class="glider">
+          <div class="card">
+            <img src="./src/img/peterpan.jpg" alt="Título do Filme">
+            <div class="info">
+              <h2>Peter Pan</h2>
+              <p>Sinopse: <br>Wendy Darling, uma jovem com medo de deixar sua casa de infância para trás, conhece Peter
+                Pan, um menino que se recusa a crescer. Com seus irmãos e uma fada, Tinker Bell, ela viaja com Peter
+                para o mundo mágico da Terra do Nunca. Lá, ela encontra um pirata perverso chamado Capitão Gancho, e
+                embarca em uma aventura emocionante que vai mudar sua vida para sempre.</br></p>
+              <p>Duração: 1h40min
+                <br>Gênero: fantasia; aventura
+                <br>Ano: 2023
+                <br>Diretor: David Lowery
+                <br>Nota: 1.4</br>
+              </p>
+              <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09"
+                  target="_blank">Disney Plus</a> </p>
+              <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
+                Trailer</button>
+            </div>
           </div>
-        </div>
 
-      <button aria-label="Previous" class="glider-prev">«</button>
-      <button aria-label="Next" class="glider-next">»</button>
-      <div role="tablist" class="dots"></div>
-    </div>
-    <div id="resp-dots"></div>
-    <script src="./Glider.js-master/glider.min.js"></script>
+          <button aria-label="Previous" class="glider-prev">«</button>
+          <button aria-label="Next" class="glider-next">»</button>
+          <div role="tablist" class="dots"></div>
+        </div>
+        <div id="resp-dots"></div>
+        <script src="./Glider.js-master/glider.min.js"></script>
 
   </main>
-  
+
   <footer class="footer">
     <div>
       <p> Nos siga nas redes sociais</p>
