--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -154,7 +154,7 @@
               Gênero: Suspense, Terror
             </p>
             <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
+            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=J40ITxP8aGM&pp=ygUoYXF1ZWxlIHF1ZSBoYWJpdGEgZW0gbWltIHRyYWlsZXIgZHVibGFkbw%3D%3D">Assista ao
               Trailer</button>
           </div>
         </div>
@@ -166,31 +166,31 @@
               Gênero: Ação; Aventura
             </p>   
             <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b5d0ac26-93a2-4c12-89cb-b8a3540e263c?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
+            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=PbEloLH3iKQ&pp=ygUWc2hhemFtIHRyYWlsZXIgZHVibGFkbw%3D%3D">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="" alt="Título do Filme">
+          <img src="./src/img/Pearl_2022.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Duração: 1h40min
-              Gênero: fantasia; aventura
+            <h2>Pearl</h2>
+            <p>Duração: 1h42min
+              Gênero: Terror, Slasher
             </p>     
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=ktFpDeW9CdQ.P&pli=1" target="_blank">Google Play Filmes e Tv</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=7MRcuN9_Pfo&pp=ygUVcGVhcmwgdHJhaWxlciBkdWJsYWRv">Assista ao
               Trailer</button>
           </div>
         </div>
         <div class="card">
-          <img src="" alt="Título do Filme">
+          <img src="./src/img/Caçador de tormentas.jpg" alt="Título do Filme">
           <div class="info">
-            <h2>Peter Pan</h2>
+            <h2>Caçador de Tormentas</h2>
             <p>Duração: 1h40min
-              Gênero: fantasia; aventura
+              Gênero: Ação; aventura
             </p>     
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
+            <p>Onde Assistir: <a href="https://play.google.com/store/movies/details?id=3xHZfbNC6bo.P" target="_blank">Google Play Filmes e Tv</a> </p>
+            <button class="trailer-button" data-trailer="https://www.youtube.com/watch?v=8nHQvTrgi58&pp=ygUlQ2HDp2Fkb3IgZGUgVG9ybWVudGFzIHRyYWlsZXIgZHVibGFkbw%3D%3D">Assista ao
               Trailer</button>
           </div>
         </div>
